--- a/2024/css/style.css
+++ b/2024/css/style.css
@@ -9,11 +9,12 @@ Body
 
 body {
   margin: 0;
+  margin-bottom: 200px;
   color: white;
   font-family: 'Open Sans', sans-serif;
 }
 
-#Survey, #Scoring {
+#Survey, #Rules {
   margin-top: 100px;
   text-align: center;
   line-height: 175%;
@@ -33,9 +34,16 @@ p {
   font-size: 18px;
   margin: 20px;
 }
+.fauxLink {
+  color: cyan;
+}
+.fauxLink:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
 
 
-#Scoring ol {
+#Rules ol {
   display: block;
   list-style-type: decimal;
   margin-top: 1em;
@@ -44,7 +52,7 @@ p {
   margin-right: 0;
   padding-left: 40px;
 }
-#Scoring li {
+#Rules li {
   display: list-item;
 }
 
@@ -108,11 +116,14 @@ article {
 }
 .sortable li {
   margin: 5px; 
-  padding: 10px; 
-  font-size: 18px; 
-  background: white;
+  padding: 8px; 
+  font-size: 16px; 
+  background: whitesmoke;
   color: black;
   border: black 1px solid;
+}
+.sortable li:hover {
+  cursor: move;
 }
 .sortableGuide { 
   list-style-type: none; 
@@ -122,8 +133,8 @@ article {
 }
 .sortableGuide li {
   margin: 5px; 
-  padding: 10px; 
-  font-size: 18px; 
+  padding: 8px; 
+  font-size: 16px; 
   background: none;
   color: white;
   text-align: right;
