--- a/2024/css/style.css
+++ b/2024/css/style.css
@@ -199,11 +199,16 @@ sup {
 /*--------------------
 Leaderboard CSS
 --------------------*/
+.container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  margin-top: 85px;
+}
 
 .leaderboard {
   width: 40%;
   border: 1px white solid;
-  margin: 50px auto;
   border-collapse: collapse;
 }
 .leaderboard th {
@@ -231,19 +236,21 @@ Leaderboard CSS
 
 /* Predctions Box */
 .predictions {
+  width: 300px;
+  display: inline-block;
   background: linear-gradient(to bottom, #3a404d, #181c26);
   border-radius: 10px;
   box-shadow: 0 7px 30px rgba(62, 9, 11, 0.3);
-  visibility: hidden;
+  /* visibility: hidden; */
 }
 .predictions p {
   margin-left: 5%;
   margin-right: 5%;
   margin-bottom: 5%;
 }
-th, td {
+.predictions th, td {
   padding: 5px;
-  text-align: center;
+  text-align: left;
 }
 
 /* contest info box */
