--- a/2024/css/style.css
+++ b/2024/css/style.css
@@ -15,6 +15,16 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
+.submit {
+  padding: 10px;
+  margin: 50px;
+  font-weight: bold;
+  background-color: green;
+  color: white;
+  border: 1px solid white;
+  cursor: pointer;
+}
+
 #Survey, #Rules, #analysis {
   margin-top: 100px;
   text-align: center;
