--- a/2024/css/style.css
+++ b/2024/css/style.css
@@ -386,6 +386,13 @@ div.tooltip {
   color: black;	
 }
 
+.heatmapHeader {
+  font-size: 26px;
+}
+.heatmapLabel {
+  font-size: 18px;
+}
+
 /*--------------------
 Mobile
 --------------------*/
@@ -417,5 +424,12 @@ Mobile
   .predictions {
     visibility: hidden;
     z-index: -1;
+  }
+
+  .heatmapHeader {
+    font-size: 14px;
+  }
+  .heatmapLabel {
+    font-size: 10px;
   }
 }
