disable text selection

--- a/2024/css/style.css
+++ b/2024/css/style.css
@@ -132,6 +132,16 @@ form {
   width: auto;
 }
 
+.sorterContainer {
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  display:flex;
+  justify-content:flex-start;
+}
+
 .sortable { 
   list-style-type: none; 
   margin: 0; 
