--- a/2024/css/style.css
+++ b/2024/css/style.css
@@ -180,9 +180,13 @@ form {
   background-color: whitesmoke;
   color: black;
   padding: 10px;
-  border: black;
+  border: black 1px solid;
   cursor: move;
   margin: 10px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
 
 /*--------------------
