background color cyan on mouse hover

--- a/2024/css/style.css
+++ b/2024/css/style.css
@@ -188,6 +188,9 @@ form {
   left: 0;
   width: 100%;
 }
+.draggableNames:hover {
+  background-color: rgb(209, 255, 255);
+}
 
 /*--------------------
 Contest Rules CSS
