--- a/2024/css/style.css
+++ b/2024/css/style.css
@@ -177,12 +177,20 @@ form {
 }
 
 .draggableNames {
+  position: absolute;
   background-color: whitesmoke;
   color: black;
   padding: 10px;
-  border: black;
+  border: black 1px solid;
   cursor: move;
   margin: 10px;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+.draggableNames:hover {
+  background-color: rgb(209, 255, 255);
+  z-index: 2;
 }
 
 /*--------------------
