--- a/2024/css/style.css
+++ b/2024/css/style.css
@@ -32,11 +32,11 @@ body {
 }
 
 h1 {
-  font-size: 22px;
+  font-size: 26px;
   margin-bottom: 10px;
 }
 h2 {
-  font-size: 32px;
+  font-size: 24px;
   margin-top: 10vh;
 }
 
@@ -49,17 +49,22 @@ article {
   text-align: left;
   width: 40%;
   margin: auto;
+  color: white;
 }
 
 /*--------------------
 Tabs CSS
 --------------------*/
-.tab {
+.tabs {
   overflow: hidden;
   border: 1px solid #ccc;
+  border-bottom: 1px solid black;
   background-color: white;
+  position: sticky;
+  top: 0;
+  z-index: 999;
 }
-.tab button {
+.tabs button {
   background-color: inherit;
   float: left;
   border: none;
@@ -69,10 +74,10 @@ Tabs CSS
   transition: 0.3s;
   font-size: 17px;
 }
-.tab button:hover {
+.tabs button:hover {
   background-color: #ddd;
 }
-.tab button.active {
+.tabs button.active {
   background-color: #ccc;
 }
 .tabcontent {
