--- a/2024/css/style.css
+++ b/2024/css/style.css
@@ -16,13 +16,18 @@ body {
 }
 
 .submit {
-  padding: 10px;
+  padding: 10px 20px;
   margin: 50px;
   font-weight: bold;
-  background-color: green;
-  color: white;
-  border: 1px solid white;
+  background-color: rgb(0, 255, 255);
+  color: black;
+  border: 1px solid black;
+  border-radius: 5px;
   cursor: pointer;
+  box-shadow: rgba(17, 170, 170, 0.1) 0px 1px 0px, rgba(17, 170, 170, 0.1) 0px 8px 24px, rgba(17, 170, 170, 0.1) 0px 16px 48px;
+}
+.submit:hover {
+  box-shadow: rgba(17, 170, 170, 0.5) 0px 1px 0px, rgba(17, 170, 170, 0.5) 0px 4px 24px, rgba(17, 170, 170, 0.5) 0px 3px 48px;
 }
 
 #Survey, #Rules, #analysis {
