change highlight colors

--- a/2024/css/style.css
+++ b/2024/css/style.css
@@ -57,6 +57,16 @@ article {
   color: white;
 }
 
+::-moz-selection { /* Code for Firefox */
+  color: black;
+  background: cyan;
+}
+
+::selection {
+  color: black;
+  background: cyan;
+}
+
 /*--------------------
 Tabs CSS
 --------------------*/
