--- a/2024/css/style.css
+++ b/2024/css/style.css
@@ -263,16 +263,21 @@ Leaderboard CSS
 }
 
 .leaderboard {
-  width: 40%;
+  width: 50%;
   border: 1px white solid;
   border-collapse: collapse;
 }
 .leaderboard th {
-  background-color:rgba(62, 9, 11, 0.3);
+  background-color: #292E3A;
   padding: 20px;
+  /* position: sticky;
+  top:45px; */
 }
 .leaderboard tr {
   border: collapse;
+}
+.leaderboard tr:hover {
+  background-color: rgb(29, 228, 228) !important;
 }
 .leaderboard td {
   padding: 15px;
@@ -297,11 +302,11 @@ Leaderboard CSS
   top: 85px;
   width: 300px;
   display: inline-block;
-  background: linear-gradient(to bottom, #3a404d, #181c26);
+  background: linear-gradient(to bottom, #292E3A, #3a404d);
   border-radius: 10px;
-  box-shadow: 0 7px 30px rgba(62, 9, 11, 0.3);
+  box-shadow: 0 7px 30px rgba(83, 73, 73, 0.3);
+  border: 1px black solid;
   padding: 5px;
-  /* visibility: hidden; */
 }
 .predictions p {
   margin-left: 5%;
@@ -319,7 +324,7 @@ Leaderboard CSS
   bottom: 2.5%;
   right: 2.5%;
   padding: 20px;
-  background: linear-gradient(to bottom, #3a404d, #181c26);
+  background: linear-gradient(to bottom, #292E3A, #3a404d);
   border-radius: 10px;
   box-shadow: 0 7px 30px rgba(62, 9, 11, 0.3);
   overflow: auto;
@@ -408,14 +413,21 @@ select.computerSelector option:checked {
 Analysis CSS
 --------------------*/
 
-.axis { font: 16px sans-serif; }
+.axis { 
+  font: 16px 
+  sans-serif; 
+  fill: whitesmoke;
+}
 
-.axis path,
-.axis line {
+.axis path {
   fill: none;
   stroke: #000;
   shape-rendering: crispEdges;
   stroke-width: 2px;
+}
+
+.noAxis path {
+  stroke-width: 0px;
 }
 
 div.tooltip {	
@@ -433,9 +445,11 @@ div.tooltip {
 
 .heatmapHeader {
   font-size: 26px;
+  fill: whitesmoke;
 }
 .heatmapLabel {
   font-size: 18px;
+  fill: whitesmoke;
 }
 
 /*--------------------
