lots of tech debt removal

--- a/2024/css/style.css
+++ b/2024/css/style.css
@@ -389,7 +389,9 @@ select.computerSelector option:checked {
   box-shadow: inset 20px 20px slategrey;
 }
 
-
+.scoresLineplotTable {
+  background-color: white;
+}
 
 /*--------------------
 Analysis CSS
