mostly got it figured out

--- a/2024/css/style.css
+++ b/2024/css/style.css
@@ -414,6 +414,17 @@ div.tooltip {
   color: black;	
 }
 
+.annotation {
+  font-size: 16px;
+}
+.annotation rect{
+  fill: white;
+  x: 10;
+  y: 10;
+  stroke-width: 1px;
+  stroke: black;
+}
+
 .heatmapHeader {
   font-size: 26px;
   fill: whitesmoke;
