add x-axis label

--- a/2024/css/style.css
+++ b/2024/css/style.css
@@ -384,8 +384,7 @@ Analysis CSS
 --------------------*/
 
 .axis { 
-  font: 16px 
-  sans-serif; 
+  font: 16px sans-serif; 
   fill: whitesmoke;
   color: whitesmoke;
 }
