--- a/2024/css/style.css
+++ b/2024/css/style.css
@@ -290,7 +290,7 @@ Leaderboard CSS
 .leaderboard tr {
   border: collapse;
 }
-.leaderboard tr:hover {
+.leaderboard tr:not(:first-child):hover {
   background-color: rgb(0, 210, 210) !important;
   color: black !important;
 }
