--- a/2024/entry-form/css/style.css
+++ b/2024/entry-form/css/style.css
@@ -9,6 +9,7 @@ General CSS
 
 body {
   margin: 0;
+  margin-bottom: 500px;
   color: white;
   background-color: #312e2b;
   font-family: 'Open Sans', sans-serif;
