--- a/2024/entry-form/css/flickity.css
+++ b/2024/entry-form/css/flickity.css
@@ -45,13 +45,13 @@ https://flickity.metafizzy.co
 
 .flickity-button {
   position: absolute;
-  background: hsla(0, 0%, 100%, 0.75);
+  background: hsla(174, 100%, 50%, .9);
   border: none;
   color: #333;
 }
 
 .flickity-button:hover {
-  background: white;
+  background: hsla(174, 100%, 50%, 1);
   cursor: pointer;
 }
 
