--- a/2024/entry-form/css/style.css
+++ b/2024/entry-form/css/style.css
@@ -19,6 +19,7 @@ body {
   padding: 10px 20px;
   margin: 50px;
   font-weight: bold;
+  font-size: 18px;
   background-color: rgb(0, 255, 255);
   color: black;
   border: 1px solid black;
@@ -37,12 +38,12 @@ body {
 }
 
 h1 {
-  font-size: 26px;
-  margin-bottom: 10px;
+  font-size: 48px;
 }
 h2 {
   font-size: 24px;
   margin-top: 10vh;
+  color: whitesmoke;
 }
 
 p { 
