--- a/2024/entry-form/css/style.css
+++ b/2024/entry-form/css/style.css
@@ -31,7 +31,7 @@ body {
   box-shadow: rgba(17, 170, 170, 0.5) 0px 1px 0px, rgba(17, 170, 170, 0.5) 0px 4px 24px, rgba(17, 170, 170, 0.5) 0px 3px 48px;
 }
 
-#Survey, #Rules, #analysis {
+#Survey, #Rules {
   margin-top: 100px;
   text-align: center;
   line-height: 175%;
@@ -281,7 +281,6 @@ form {
 }
 
 .draggableNames {
-  position: absolute;
   background-color: whitesmoke;
   color: black;
   padding: 10px;
