--- a/2024/entry-form/css/style.css
+++ b/2024/entry-form/css/style.css
@@ -46,6 +46,11 @@ h2 {
   color: whitesmoke;
 }
 
+li {
+  font-size: 18px;
+  margin: 10px auto;
+}
+
 p { 
   font-size: 18px;
   margin: 20px;
@@ -244,6 +249,7 @@ form {
   user-select: none;
   display:flex;
   justify-content:flex-start;
+  margin: 75px auto;
 }
 
 .sortable { 
