--- a/2024/entry-form/css/style.css
+++ b/2024/entry-form/css/style.css
@@ -17,7 +17,7 @@ body {
 
 .submit {
   padding: 10px 20px;
-  margin: 50px;
+  margin: 10px;
   font-weight: bold;
   font-size: 18px;
   background-color: rgb(0, 255, 255);
@@ -55,6 +55,7 @@ p {
   font-size: 18px;
   margin: 20px;
   color: whitesmoke;
+  line-height: 150%;
 }
 
 article {
@@ -249,7 +250,7 @@ form {
   user-select: none;
   display:flex;
   justify-content:flex-start;
-  margin: 75px auto;
+  margin: 50px auto;
 }
 
 .sortable { 
