wrote reset function

--- a/2024/entry-form/css/style.css
+++ b/2024/entry-form/css/style.css
@@ -268,6 +268,11 @@ form {
   color: gray;
   border: gray 1px dashed;
 }
+.hasName {
+  background-color: whitesmoke !important;
+  border: 1px black solid !important;
+  color: black !important;
+}
 .sortable li:hover {
   cursor: move;
 }
