--- a/2024/entry-form/css/style.css
+++ b/2024/entry-form/css/style.css
@@ -156,6 +156,9 @@ a:active {
 .suarez {
   background-image: url("https://static01.nytimes.com/newsgraphics/2023-02-10-2024-candidate-tracker/73083cdf4205ef0105d0434d67b2625451f0faf4/_assets/headshots/suarez.png");
 }
+.hurd {
+  background-image: url("https://static01.nytimes.com/newsgraphics/2023-02-10-2024-candidate-tracker/b7f83aca418a5851ac56978f905b40086810db14/_assets/headshots/hurd.png");
+}
 
 /*--------------------
 Tabs CSS
