--- a/2024/entry-form/css/style.css
+++ b/2024/entry-form/css/style.css
@@ -31,6 +31,12 @@ body {
   box-shadow: rgba(17, 170, 170, 0.5) 0px 1px 0px, rgba(17, 170, 170, 0.5) 0px 4px 24px, rgba(17, 170, 170, 0.5) 0px 3px 48px;
 }
 
+.errorMessage {
+  display:none;
+  color:rgb(254, 126, 126);
+  font-weight: bold;
+}
+
 #Survey, #Rules {
   margin-top: 100px;
   text-align: center;
