--- a/2024/entry-form/css/style.css
+++ b/2024/entry-form/css/style.css
@@ -99,7 +99,6 @@ a:active {
   background: transparent;
   width: 90%;
   margin: auto;
-  /* border: 1px white solid; */
 }
 
 .gallery-cell {
@@ -109,10 +108,6 @@ a:active {
   background: transparent;
   counter-increment: gallery-cell;
 }
-
-/* .gallery-cell.is-selected {
-  background: cyan;
-} */
 
 /* arrow color */
 .flickity-prev-next-button .arrow {
@@ -352,16 +347,29 @@ Mobile
 --------------------*/
 
 @media screen and (max-width: 600px) {
-  .leaderboard {
-    position: absolute;
-    /* top: 1000px; */
+  h1 {
+    font-size: 36px;
+    line-height: 120%;
+  }
+  article {
     width: 90%;
-    margin-left: auto;
-    margin-right: auto;
-    left: 5%;
-    margin-top: 70%;
-    -webkit-transform: translate(0%, 0%);
-          transform: translate(0%, 0%);
+  }
+  .gallery {
+    width: 95%;
+  }
+  .gallery-cell {
+    width: 10vh;
+    height: 10vh;
+    margin-right: 5px;
+  }
+  .headshot {
+    height: 70%;
+    width: 70%;
+  }
+  .flickity-prev-next-button {
+    height: 30px !important;
+    width: 30px !important;
+    top: 90% !important;
   }
 }
 
