--- a/2024/entry-form/css/style.css
+++ b/2024/entry-form/css/style.css
@@ -27,14 +27,37 @@ body {
   cursor: pointer;
   box-shadow: rgba(17, 170, 170, 0.1) 0px 1px 0px, rgba(17, 170, 170, 0.1) 0px 8px 24px, rgba(17, 170, 170, 0.1) 0px 16px 48px;
 }
-.submit:hover {
+.submit:enabled:hover {
   box-shadow: rgba(17, 170, 170, 0.5) 0px 1px 0px, rgba(17, 170, 170, 0.5) 0px 4px 24px, rgba(17, 170, 170, 0.5) 0px 3px 48px;
+}
+.submit:disabled {
+  background-color: gray;
+  box-shadow: none;
 }
 
 .errorMessage {
   display:none;
   color:rgb(254, 126, 126);
   font-weight: bold;
+}
+
+.loader {
+  border: 20px solid rgb(255, 159, 159); 
+  border-top: 20px solid #b72121;
+  border-radius: 50%;
+  width: 10vw;
+  height: 10vw;
+  animation: spin 3s linear infinite;
+  margin: auto;
+  position: fixed;
+  bottom: 45%;
+  right: 45%;
+  display: none;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
 
 #Survey, #Rules {
@@ -387,6 +410,11 @@ Mobile
   }
   .tap {
     display: inline;
+  }
+  .loader {
+    width: 10vh;
+    height: 10vh;
+    right: 40%;
   }
 }
 
