--- a/2024/thank-you/css/style.css
+++ b/2024/thank-you/css/style.css
@@ -159,6 +159,33 @@ sup {
 }
 
 /*--------------------
+Sponsor section
+--------------------*/
+
+.sponsor_container_container {
+  width: 70%;
+  margin: auto;
+  margin-top: 5%;
+  display: flex;
+  justify-content: center;
+}
+
+.sponsor_container {
+  text-align: center;
+  background-color: white;
+  padding: 20px;
+  margin: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.centered {
+  color: #aa56a9;
+  font-weight: bold;
+  font-size: 42px;
+}
+
+/*--------------------
 Mobile
 --------------------*/
 
