--- a/2024/thank-you/css/style.css
+++ b/2024/thank-you/css/style.css
@@ -179,6 +179,19 @@ Sponsor section
   cursor: pointer;
 }
 
+.bellwether_container {
+  width: 65%;
+}
+.cultureplot_container {
+  width: 35%;
+}
+.bellwether_logo {
+  height:90%; width:90%;
+}
+.cultureplot_logo {
+  height:80%; width:80%;
+}
+
 .centered {
   color: #aa56a9;
   font-weight: bold;
@@ -196,5 +209,21 @@ Mobile
   }
   article {
     width: 90%;
+  }
+  .sponsor_container_container {
+    width: 100%;
+    display: block;
+  }
+  .sponsor_container {
+    display: block;
+    text-align: center;
+    margin: 10px auto;
+    width: 80%;
+  }
+  .centered {
+    font-size: 36px;
+  }
+  .cultureplot_logo {
+    height:50%; width:50%;
   }
 }
