--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@ body {
 
 h1 { font-size: 52px; margin: 15px 0px 15px 0px; font-weight: bold; line-height: 56px; color: #191919; font-family: Georgia, helvetica;}
 
-
 a:link { color: #141DFF; text-decoration: none;}
 a:visited{ color: #141DFF; }
 a:hover {text-decoration: none;}
@@ -22,8 +21,6 @@ a:hover {text-decoration: none;}
     background: black;
     color: #fcfcfc;
 }
-
-
 
 
 /* 3 column layout */
@@ -67,9 +64,6 @@ div .link_card img{
     width: 75%;
     margin-top: 0px;
 }
-div .link_card:hover{
-    background-color: rgba(0,0,0,0.3);
-}
 
 /* ************************ */
 
@@ -80,13 +74,16 @@ div .link_card:hover{
     margin-top: 0px;
     width:100%;
     height: 100px;
+    margin-top: 20px;
 }
 
 .title {
     font-size: 60px;
     font-weight: bold;
     color: white;
-    height: 75%; 
+    height: 100%; 
+    line-height: 120%;
+    margin: 20px auto;
     width:100%;
     display:flex;
     align-items: center;
