--- a/2024/leaderboard/css/style.css
+++ b/2024/leaderboard/css/style.css
@@ -9,27 +9,13 @@ General CSS
 
 body {
   margin: 0;
+  margin-bottom: 25%;
   color: white;
   background-color: #312e2b;
   font-family: 'Open Sans', sans-serif;
 }
 
-.submit {
-  padding: 10px 20px;
-  margin: 50px;
-  font-weight: bold;
-  background-color: rgb(0, 255, 255);
-  color: black;
-  border: 1px solid black;
-  border-radius: 5px;
-  cursor: pointer;
-  box-shadow: rgba(17, 170, 170, 0.1) 0px 1px 0px, rgba(17, 170, 170, 0.1) 0px 8px 24px, rgba(17, 170, 170, 0.1) 0px 16px 48px;
-}
-.submit:hover {
-  box-shadow: rgba(17, 170, 170, 0.5) 0px 1px 0px, rgba(17, 170, 170, 0.5) 0px 4px 24px, rgba(17, 170, 170, 0.5) 0px 3px 48px;
-}
-
-#Survey, #Rules, #analysis {
+#Rules, #analysis {
   margin-top: 100px;
   text-align: center;
   line-height: 175%;
@@ -122,109 +108,12 @@ Tabs CSS
   to {opacity: 1;}
 }
 
-/*--------------------
-Contest Entry Form CSS
---------------------*/
 .fauxLink {
   color: cyan;
 }
 .fauxLink:hover {
   text-decoration: underline;
   cursor: pointer;
-}
-
-form {
-  background-color: #fff;
-  width: 90%;
-  margin: 50px auto;
-  padding: 30px 20px;
-  box-shadow: 2px 5px 10px rgba(255, 255, 255, 0.25);
-  color: black;
-}
-.form-control {
-  text-align: left;
-  margin-bottom: 25px;
-}
-.form-control label {
-  display: block;
-  margin-bottom: 10px;
-}
-
-.form-control input,
-.form-control select,
-.form-control textarea {
-  border: 1px solid #777;
-  border-radius: 2px;
-  font-family: inherit;
-  padding: 10px;
-  display: block;
-  width: 95%;
-}
-.form-control input[type="radio"],
-.form-control input[type="checkbox"] {
-  display: inline-block;
-  width: auto;
-}
-
-.sorterContainer {
-  -moz-user-select: none;
-  -khtml-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  display:flex;
-  justify-content:flex-start;
-}
-
-.sortable { 
-  list-style-type: none; 
-  margin: 0; 
-  padding: 0; 
-  width: 30%; 
-  display: inline-block;
-}
-.sortable li {
-  margin: 5px; 
-  padding: 8px; 
-  font-size: 16px; 
-  background: rgba(245, 245, 245, 0.1);
-  color: gray;
-  border: gray 1px dashed;
-}
-.sortable li:hover {
-  cursor: move;
-}
-.sortableGuide { 
-  list-style-type: none; 
-  margin: 0; 
-  padding: 0; 
-  display: inline-block;
-}
-.sortableGuide li {
-  margin: 5px; 
-  padding: 8px; 
-  font-size: 16px; 
-  background: none;
-  color: white;
-  text-align: right;
-  border: 1px transparent solid;
-}
-
-.draggableNames {
-  position: absolute;
-  background-color: whitesmoke;
-  color: black;
-  padding: 10px;
-  border: black 1px solid;
-  cursor: move;
-  margin: 10px;
-  top: 0;
-  left: 0;
-  width: 100%;
-}
-.draggableNames:hover {
-  background-color: rgb(209, 255, 255);
-  z-index: 2;
 }
 
 /*--------------------
@@ -269,6 +158,10 @@ sup {
 /*--------------------
 Leaderboard CSS
 --------------------*/
+#Leaderboard {
+  display: block;
+}
+
 .container {
   display: flex;
   justify-content: space-evenly;
@@ -454,10 +347,67 @@ div.tooltip {
 }
 
 /*--------------------
+Sponsor section
+--------------------*/
+
+.sponsor_container_container {
+  width: 70%;
+  margin: auto;
+  margin-top: 5%;
+  display: flex;
+  justify-content: center;
+}
+
+.sponsor_container {
+  text-align: center;
+  background-color: white;
+  padding: 20px;
+  margin: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+  border: 1px black solid;
+}
+
+.bellwether_container {
+  width: 65%;
+}
+.cultureplot_container {
+  width: 35%;
+}
+.scioto_container {
+  width: 66%;
+  background-color: rgb(69, 69, 69) !important;
+}
+.bellwether_logo {
+  height:90%; width:90%;
+}
+.cultureplot_logo {
+  height:80%; width:80%;
+}
+.scioto_logo {
+  height:90%; width:90%;
+  margin-top: 10px;
+}
+
+.centered {
+  color: #aa56a9;
+  font-weight: bold;
+  font-size: 42px;
+}
+
+/*--------------------
 Mobile
 --------------------*/
 
 @media screen and (max-width: 600px) {
+  h1 {
+    font-size: 36px;
+    line-height: 120%;
+  }
+  article {
+    width: 90%;
+  }
+
   .leaderboard {
     position: absolute;
     /* top: 1000px; */
@@ -491,5 +441,22 @@ Mobile
   }
   .heatmapLabel {
     font-size: 10px;
+  }
+
+  .sponsor_container_container {
+    width: 100%;
+    display: block;
+  }
+  .sponsor_container {
+    display: block;
+    text-align: center;
+    margin: 10px auto;
+    width: 80%;
+  }
+  .centered {
+    font-size: 36px;
+  }
+  .cultureplot_logo {
+    height:50%; width:50%;
   }
 }
