some heatmap adjustments

--- a/2024/leaderboard/css/style.css
+++ b/2024/leaderboard/css/style.css
@@ -431,6 +431,10 @@ Mobile
           transform: translate(0%, 0%);
   }
 
+  .axis { 
+    font: 12px sans-serif; 
+  }
+
   .predictions {
     visibility: hidden;
     z-index: -1;
