instructions for leaderboard interaction

--- a/2024/leaderboard/css/style.css
+++ b/2024/leaderboard/css/style.css
@@ -15,6 +15,10 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
+#Leaderboard {
+  margin-top: 50px;
+}
+
 #Rules, #analysis {
   margin-top: 50px;
   text-align: center;
