--- a/2024/leaderboard/css/style.css
+++ b/2024/leaderboard/css/style.css
@@ -37,6 +37,11 @@ h3 {
   font-size: 16px;
   margin: 2px auto;
 }
+.playerHeader {
+  font-size: 22px;
+  text-align: center;
+  font-weight: bold;
+}
 
 p { 
   font-size: 18px;
