--- a/2024/leaderboard/css/style.css
+++ b/2024/leaderboard/css/style.css
@@ -218,7 +218,7 @@ Leaderboard CSS
   text-align:right;
 }
 .leaderboardRow {
-  border: collapse;
+  border-collapse: collapse;
   /* cursor: pointer; */
 }
 .leaderboardRow:hover {
@@ -465,16 +465,12 @@ Mobile
     width: 90%;
   }
 
-  .container {
-    min-width: 0;
-  }
   .leaderboard {
     position: absolute;
     overflow: hidden;
-    max-width: 80%;
+    max-width: 90%;
     margin-left: auto;
     margin-right: auto;
-    left: 1%;
     margin-top: 0;
     -webkit-transform: translate(0%, 0%);
           transform: translate(0%, 0%);
